src/test/input/codegen/fail/declaration.c
// Some undeclared test

int main() {
    a();
}